crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__navigation-focus-collapse_styled_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
<fg:#a0a0a0>▾ trace  </> <fg:cyan>╺━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>  ▾ requ…</> <fg:cyan>╺━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>    ▾ qu…</> <fg:cyan>╺━━━━━━━━╸</>
<fg:#a0a0a0>        …</> <fg:#a0a0a0>━</>
<fg:white,bold>        …</> <fg:cyan>╺━━━━━━━╸</>
          <fg:cyan>■</><fg:#a0a0a0>scheduled:100%</>
<fg:#a0a0a0>        …</> <fg:green>━</>
<fg:#a0a0a0>    ▸ st…</> <fg:cyan>╺━━━━━╸</>
