crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__second-selected_30x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
           ████████
           ████████
           ████████
   Plan      Code     Review
