crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__second-selected_80x18.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---





                       ┌Selector────────────────────────┐
                       │            ████████            │
                       │            ████████            │
                       │            ████████            │
                       │            ████████            │
                       │    Plan      Code     Review   │
                       │                                │
                       └────────────────────────────────┘
