crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__semantic-overview_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
▾ trace            ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
  ▾ request 01a0a… ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▾ query        ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
        admitted   ━
        planning   ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
                   ■scheduled:100%
        completed  ━
    ▸ stage 0      ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
