crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__semantic-overview_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
▾ trace   ╺━━━━━━━━━━━━━━━━╸
  ▾ requ… ╺━━━━━━━━━━━━━━━━╸
    ▾ qu… ╺━━━━━━━━╸
        … ━
        … ╺━━━━━━━╸
          ■scheduled:100%
        … ━
    ▸ st… ╺━━━━━╸
