crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__semantic-overview_after_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
Trace · request 01a0a709 · 2026-09-15 21:48:28.18575Z → 2026-09-15 21:48:28.87575Z · 690ms
Operation                  Observed UTC             Offset     Duration   0ns        345ms     690ms
▾ trace                    21:48:28.185750000Z      +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
  ▾ request 01a0a709       21:48:28.185750000Z      +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▾ query                21:48:28.185750000Z      +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
        admitted           21:48:28.185750000Z      +0ns       —          ◆
        planning           21:48:28.186750000Z      +1ms       219ms      ╺━━━━━━╸
        completed          21:48:28.875750000Z      +690ms     —                                   ◆
    node: completed
    observed UTC: 2026-09-15 21:48:28.87575Z
    offset: +690ms
    duration: unavailable
    source: owned fixture
    ▸ stage 0              21:48:28.225750000Z      +40ms      260ms       ╺━━━━━━━━╸
