crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__semantic-overview_styled_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
<fg:#a0a0a0>▾ trace           </> <fg:cyan>╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>  ▾ request 01a0a…</> <fg:cyan>╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>    ▾ query       </> <fg:cyan>╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>        admitted  </> <fg:#a0a0a0>━</>
<fg:white,bold>        planning  </> <fg:cyan>╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸</>
                   <fg:cyan>■</><fg:#a0a0a0>scheduled:100%</>
<fg:#a0a0a0>        completed </> <fg:green>━</>
<fg:#a0a0a0>    ▸ stage 0     </> <fg:cyan>╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸</>
