crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__uncertainty-and-density_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
▾ trace   ╺━━━━━━━━━━━━━━━━╸
  ▾ part… ╺━━━━━━━━━━━━━━━━╸
    ▾ ev… ╺━━━━━━━━━━━━━━━━╸
        … ╺━╸
          ■activity:100%
        … ╺━╸
        … ╺━╸
        … ╺━╸
