crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__uncertainty-and-density_after_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
Trace · partial capture · 00:00:00 → 00:00:00 · 60ns
Operation                  Observed UTC             Offset     Duration   0ns        30ns       60ns
  ▾ partial capture        00:00:00                 +0ns       60ns       ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▾ evidence             00:00:00                 +0ns       60ns       ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
        observed           00:00:00                 +0ns       —          ◆
        failed             00:00:00                 +0ns       —          ◆
        missing start      00:00:00                 +20ns      —                  ◁
        clock regression   00:00:00                 +60ns      —                      ◁            ▷
        missing end        00:00:00                 +40ns      —                          ▷
        partial coverage   —                        —          —
